fixed object z-index bug

--- a/src/styles/components/_module.scss
+++ b/src/styles/components/_module.scss
@@ -82,6 +82,10 @@
   &.gold {
     margin-bottom: 4rem;
   }
+  object {
+    position: relative;
+    z-index: -100;
+  }
 }
 
 svg {
